detail-task-show

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <!-- 任務詳情開始 -->
  <div class="task-detail-mask"></div>
  <div class="task-detail">
- 	<div class="content">
+ 	<!-- <div class="content">
  		記得買菜！
  	</div>
  	<div>
@@ -35,12 +35,12 @@
  	  <textarea name="" id=""></textarea>		
  	</div>
  	</div>
- 	<div class="remind"><!-- 任務提醒 -->
+ 	<div class="remind">
  		<input type="date">
  		<button type="submit">submit</button>
- 	</div>
+ 	</div> -->
 
- </div>
+ </div> 
  
  <!-- 任務詳情結束 -->
  </div>
